# HyperCrystal

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  hypercrystal_config.json  hypercrystal_dash.py  pyproject.toml  requirements-optional.txt  requirements.txt  run.py  setup.py  users.json
dashboard/: __init__.py
docs/: SHORTCOMINGS_v1.md
hypercrystal/: cognition_engine.py  config.py  core_engine.py  output_product.py  utils.py
hypercrystal/tests/: test_core.py
scripts/: init_setup.sh
utils/: auth.py  config.py
