[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HyperCrystal"
version = "2.0.0"
description = "Quantum-Inspired Novelty Engine with cognitive meta-learning"
authors = [{ name = "HyperCrystal Contributors", email = "support@ghost-mesh.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-limiter>=3.0.0",
    "werkzeug>=3.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "cma>=3.2.0",
    "gudhi>=3.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort", "flake8"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.scripts]
hypercrystal = "hypercrystal.cli:main"

[project.urls]
Homepage = "https://github.com/GhostMeshIO/HyperCrystal"
Issues = "https://github.com/GhostMeshIO/HyperCrystal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["HyperCrystal*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
